--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,87 @@
-opencv-python
-scipy
-yacs
+absl-py==1.1.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+alembic==1.4.1
+async-timeout==4.0.2
+attrs==21.4.0
+awscli==1.25.27
+boto3==1.24.27
+botocore==1.27.27
+cachetools==5.2.0
+certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
+charset-normalizer==2.1.0
+click==8.1.3
+cloudpickle==2.1.0
+colorama==0.4.4
+cycler==0.11.0
+databricks-cli==0.17.0
+docker==5.0.3
+docutils==0.16
+entrypoints==0.4
+Flask==2.1.2
+fonttools==4.34.4
+frozenlist==1.3.0
+fsspec==2022.5.0
+gitdb==4.0.9
+GitPython==3.1.27
+google-auth==2.9.0
+google-auth-oauthlib==0.4.6
+greenlet==1.1.2
+grpcio==1.47.0
+gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+kiwisolver==1.4.3
+Mako==1.2.1
+Markdown==3.3.7
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+mlflow==1.27.0
+multidict==6.0.2
+numpy==1.23.1
+oauthlib==3.2.0
+opencv-python==4.6.0.66
+packaging==21.3
+pandas==1.4.3
+Pillow==9.2.0
+prometheus-client==0.14.1
+prometheus-flask-exporter==0.20.2
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyDeprecate==0.3.2
+PyJWT==2.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-editor==1.0.4
+pytorch-lightning==1.6.4
+pytz==2022.1
+PyYAML==5.4.1
+querystring-parser==1.2.4
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.7.2
+s3transfer==0.6.0
+scipy==1.8.1
+six==1.16.0
+smmap==5.0.0
+SQLAlchemy==1.4.39
+sqlparse==0.4.2
+tabulate==0.8.10
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+torch==1.12.0
+torchmetrics==0.9.2
+torchvision==0.13.0
+tqdm==4.64.0
+typing_extensions==4.3.0
+urllib3==1.26.10
+websocket-client==1.3.3
+Werkzeug==2.1.2
+yacs==0.1.8
+yarl==1.7.2
+zipp==3.8.0
